@@ -2737,10 +2737,14 @@ g_main_context_pending (GMainContext *context)
  * checking to see if any event sources are ready to be processed,
  * then if no events sources are ready and @may_block is %TRUE, waiting
  * for a source to become ready, then dispatching the highest priority
- * events sources that are ready. Note that even when @may_block is %TRUE,
- * it is still possible for g_main_context_iteration() to return
- * %FALSE, since the the wait may be interrupted for other
- * reasons than an event source becoming ready.
+ * events sources that are ready. Otherwise, if @may_block is %FALSE 
+ * sources are not waited to become ready, only those highest priority 
+ * events sources will be dispatched (if any), that are ready at this 
+ * given moment without further waiting.
+ *
+ * Note that even when @may_block is %TRUE, it is still possible for 
+ * g_main_context_iteration() to return %FALSE, since the the wait may 
+ * be interrupted for other reasons than an event source becoming ready.
  * 
  * Return value: %TRUE if events were dispatched.
  **/
