@@ -1,5 +1,10 @@
 2007-11-09  Matthias Clasen <mclasen@redhat.com>
 
+	* glib/gmain.c (g_main_context_iteration): Improve the
+	docs.  (#491974, Areg Beketovski)
+
+2007-11-09  Matthias Clasen <mclasen@redhat.com>
+
 	* glib/gdate.c: Coding style fixes.
 
 2007-11-09  Matthias Clasen <mclasen@redhat.com>
